<resources>
    <string name="app_name">Analyst</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_list">Home</string>
    <string name="title_graph">Graph</string>
    <string name="title_diagram_cirlce">Diagram</string>
    <string name="navigation_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="search_thee_dots">Search...</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="new_ticket">New Ticket</string>
    <string name="currency_example">Ex: 100.0</string>
    <string name="addTicket">Add Ticket</string>
</resources>
